update list section
