# src/main/kotlin/com/wutsi/ecommerce/catalog/endpoint/ListSectionsController.kt
@@ -1,16 +1,18 @@
 package com.wutsi.ecommerce.catalog.endpoint
 
-import com.wutsi.ecommerce.catalog.`delegate`.ListSectionsDelegate
+import com.wutsi.ecommerce.catalog.delegate.ListSectionsDelegate
 import com.wutsi.ecommerce.catalog.dto.ListSectionResponse
 import org.springframework.security.access.prepost.PreAuthorize
-import org.springframework.web.bind.`annotation`.GetMapping
-import org.springframework.web.bind.`annotation`.RestController
+import org.springframework.web.bind.annotation.GetMapping
+import org.springframework.web.bind.annotation.RequestParam
+import org.springframework.web.bind.annotation.RestController
 
 @RestController
-public class ListSectionsController(
+class ListSectionsController(
     private val `delegate`: ListSectionsDelegate
 ) {
     @GetMapping("/v1/sections")
     @PreAuthorize(value = "hasAuthority('catalog-read')")
-    public fun invoke(): ListSectionResponse = delegate.invoke()
+    fun invoke(@RequestParam(name = "account-id") accountId: Long): ListSectionResponse =
+        delegate.invoke(accountId)
 }
